--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -29,20 +29,29 @@
                     <li>@Html.ActionLink("Cuidados", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Denúncias", "Create", "DENUNCIA")</li>
                     <li>@Html.ActionLink("Fale Conosco", "FaleConosco", "FEEDBACK")</li>
+                    @if (Session["Perfil"] != null)
+                     {
+                        <li>@ViewBag.Nome</li>
+                     }
                 </ul>
-          
-                <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
-                    <li>
-                        @if (Session["Perfil"] == null)
-                        {
+
+                @if (Session["Perfil"] == null)
+                {
+                    
+                    <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
+                        <li>
                             @Html.ActionLink("Entrar", "Signin", "Login")
-                        }
-                        else
-                        {
+                        </li>
+                    </ul>
+                }
+                else
+                {
+                    <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
+                        <li>
                             @Html.ActionLink("Sair", "Signout", "Login")
-                        }
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                }
             </div>
         </nav>
     </header>
