--- a/AmigoDono.Web/Views/DENUNCIA/Create.cshtml
+++ b/AmigoDono.Web/Views/DENUNCIA/Create.cshtml
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" , @required = "true", @type = "email" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,7 +52,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.TipoLogradouro, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-2">
                 @Html.EditorFor(model => model.TipoLogradouro, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TipoLogradouro, "", new { @class = "text-danger" })
             </div>
@@ -60,7 +60,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.NomeLogradouro, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-2">
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.NomeLogradouro, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NomeLogradouro, "", new { @class = "text-danger" })
             </div>
@@ -100,7 +100,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.UF, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-1">
                 @Html.EditorFor(model => model.UF, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.UF, "", new { @class = "text-danger" })
             </div>
