--- a/AmigoDono.Web/Views/DADOS/Detalhes.cshtml
+++ b/AmigoDono.Web/Views/DADOS/Detalhes.cshtml
@@ -121,5 +121,5 @@
     </div>
 </div>
         <p>
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Voltar", "Index")
         </p>
