--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -12,7 +12,10 @@
 
 
 
+
 <h2 class="text-center" style="padding-top:50px">Adote um amiguinho</h2>
+
+@if ()
 
 @using (Html.BeginForm("CapturarAmigo", "Home", FormMethod.Get, new { id = "cadastrar-form", role = "form", @class = "form-signin" }))
 {
@@ -59,56 +62,63 @@
 
         @foreach (var item in Model)
         {
-            <tr>
-                @if (item.Imagem != null)
-                {
-                    <td class="text-center">
-                        @{
-                            var base64 = Convert.ToBase64String(item.Imagem);
-                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-                        }
-                        <img src='@imgSrc' style="max-width:100px; max-height:100px;" />
-                    </td>
-                }
+        <tr>
+            @if (item.Imagem != null)
+            {
                 <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.NomePet)
+                    @{
+                        var base64 = Convert.ToBase64String(item.Imagem);
+                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                    }
+                    <img src='@imgSrc' style="max-width:100px; max-height:100px;" />
                 </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.TipoPet)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.DataNascimento)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.Situacao)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.Idade)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.NomeRaça)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.Sexo)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.Porte)
-                </td>
-                <td class="text-center">
-                    @Html.DisplayFor(modelItem => item.Castrado)
-                </td>
-                <td class="text-center" hidden>
-                    @Html.DisplayFor(modelItem => item.OBS)
-                </td>
+            }
+            <td class="text-center" hidden>
+                @Html.DisplayFor(modelItem => item.IDP)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.NomePet)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.TipoPet)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.DataNascimento)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.Situacao)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.Idade)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.NomeRaça)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.Sexo)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.Porte)
+            </td>
+            <td class="text-center">
+                @Html.DisplayFor(modelItem => item.Castrado)
+            </td>
+            <td class="text-center" hidden>
+                @Html.DisplayFor(modelItem => item.OBS)
+            </td>
 
             @if (Session["Perfil"] != null)
             {
                 <td class="text-center">
-                    <button class="btn btn-success center-block" onclick="$('#cadastrar-form').submit()">Capturar Amigo</button>
+                    <button class="btn btn-success center-block" data-toggle="modal"
+                            data-target="#ModalMensagem" onclick="$('#cadastrar-form').submit()">
+                        Capturar Amigo
+                    </button>
+
                     <br />
 
                     <!--Configuração do Botão que vai Abrir o Modal, onde será definido os parametros do Modal com os dados que
-                    irá aparecer no JQuery-->
+            irá aparecer no JQuery-->
 
                     <button class="btn btn-primary BtnDetalhes"
                             data-Imagem="@item.Imagem"
@@ -147,12 +157,11 @@
                             data-target="#ModalDetalhes">
                         Detalhes
                     </button>
-                  </td>
+                </td>
             }
 
-            </tr>
-        }
-
+        </tr>
+       }
     </table>
 
 }
@@ -222,10 +231,9 @@
 
 <!-- Scripts -->
 @section Scripts{
-    @if (ViewBag.Mensagem != "")
+     @if (ViewBag.Mensagem != "")
     {
         <script>
-            $("#ModalMensagem").modal('toggle');
             $("#ModalMensagem").modal('show');
         </script>
     }
