--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -120,7 +120,7 @@
                     <!--Configuração do Botão que vai Abrir o Modal, onde será definido os parametros do Modal com os dados que
             irá aparecer no JQuery-->
 
-                    <button class="btn btn-primary BtnDetalhes"
+                    <button class="btn btn-primary BtnDetalhes" onclick="return false"
                             data-Imagem="@item.Imagem"
                             data-NomePet="@item.NomePet"
                             data-TipoPet="@item.TipoPet"
@@ -141,7 +141,7 @@
             else
             {
                 <td class="text-center">
-                    <button class="btn btn-primary BtnDetalhes"
+                    <button class="btn btn-primary BtnDetalhes" onclick="return false"
                             data-Imagem="@item.Imagem"
                             data-NomePet="@item.NomePet"
                             data-TipoPet="@item.TipoPet"
