--- a/AmigoDono.Web/Views/DENUNCIA/Create.cshtml
+++ b/AmigoDono.Web/Views/DENUNCIA/Create.cshtml
@@ -18,13 +18,13 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Data, "Data", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" hidden>
+            @Html.LabelFor(model => model.DataDenuncia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-2">
-                @Html.EditorFor(model => model.Data, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
-                @Html.ValidationMessageFor(model => model.Data, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.DataDenuncia, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
+                @Html.ValidationMessageFor(model => model.DataDenuncia, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Denunciante, htmlAttributes: new { @class = "control-label col-md-2" })
