--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -10,7 +10,10 @@
     ViewBag.Mensagem = "";
 }
 
-
+@if (Session["Perfil"] != null)
+{
+    @ViewBag.ID
+}
 
 
 <h2 class="text-center" style="padding-top:50px">Adote um amiguinho</h2>
@@ -61,106 +64,112 @@
 
         @foreach (var item in Model)
         {
-        <tr>
-            @if (item.Imagem != null)
-            {
-                <td class="text-center">
-                    @{
-                        var base64 = Convert.ToBase64String(item.Imagem);
-                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-                    }
-                    <img src='@imgSrc' style="max-width:100px; max-height:100px;" />
+            <tr>
+                @if (item.Imagem != null)
+                {
+                    <td class="text-center">
+                        @{
+                            var base64 = Convert.ToBase64String(item.Imagem);
+                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                        }
+                        <img src='@imgSrc' style="max-width:100px; max-height:100px;" />
+                    </td>
+                }
+                else
+                {
+                    <td class="text-center">
+                        <img src="~/Content/imagens/Foto em branco.jpg" style="max-width:100px; max-height:100px;" />
+                    </td>
+                }
+                <td class="text-center" hidden>
+                    @Html.DisplayFor(modelItem => item.IDP)
                 </td>
-            }
-            <td class="text-center" hidden>
-                @Html.DisplayFor(modelItem => item.IDP)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.NomePet)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.TipoPet)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.DataNascimento)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.Situacao)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.Idade)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.NomeRaça)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.Sexo)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.Porte)
-            </td>
-            <td class="text-center">
-                @Html.DisplayFor(modelItem => item.Castrado)
-            </td>
-            <td class="text-center" hidden>
-                @Html.DisplayFor(modelItem => item.OBS)
-            </td>
-
-            @if (Session["Perfil"] != null)
-            {
                 <td class="text-center">
-                    <button class="btn btn-success center-block" data-toggle="modal"
-                            data-target="#ModalMensagem" onclick="$('#cadastrar-form').submit()">
-                        Capturar Amigo
-                    </button>
-
-                    <br />
-
-                    <!--Configuração do Botão que vai Abrir o Modal, onde será definido os parametros do Modal com os dados que
-            irá aparecer no JQuery-->
-
-                    <button class="btn btn-primary BtnDetalhes" onclick="return false"
-                            data-Imagem="@item.Imagem"
-                            data-NomePet="@item.NomePet"
-                            data-TipoPet="@item.TipoPet"
-                            data-Situacao="@item.Situacao"
-                            data-Idade="@item.Idade"
-                            data-NomeRaca="@item.NomeRaça"
-                            data-Sexo="@item.Sexo"
-                            data-Porte="@item.Porte"
-                            data-Castrado="@item.Castrado"
-                            data-DataNascimento="@item.DataNascimento"
-                            data-OBS="@item.OBS"
-                            data-toggle="modal"
-                            data-target="#ModalDetalhes">
-                        Detalhes
-                    </button>
+                    @Html.DisplayFor(modelItem => item.NomePet)
                 </td>
-            }
-            else
-            {
                 <td class="text-center">
-                    <button class="btn btn-primary BtnDetalhes" onclick="return false"
-                            data-Imagem="@item.Imagem"
-                            data-NomePet="@item.NomePet"
-                            data-TipoPet="@item.TipoPet"
-                            data-Situacao="@item.Situacao"
-                            data-Idade="@item.Idade"
-                            data-NomeRaca="@item.NomeRaça"
-                            data-Sexo="@item.Sexo"
-                            data-Porte="@item.Porte"
-                            data-Castrado="@item.Castrado"
-                            data-DataNascimento="@item.DataNascimento"
-                            data-OBS="@item.OBS"
-                            data-toggle="modal"
-                            data-target="#ModalDetalhes">
-                        Detalhes
-                    </button>
+                    @Html.DisplayFor(modelItem => item.TipoPet)
                 </td>
-            }
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.DataNascimento)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Situacao)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Idade)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.NomeRaça)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Sexo)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Porte)
+                </td>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Castrado)
+                </td>
+                <td class="text-center" hidden>
+                    @Html.DisplayFor(modelItem => item.OBS)
+                </td>
 
-        </tr>
-       }
+                @if (Session["Perfil"] != null)
+                {
+                    <td class="text-center">
+                        <button class="btn btn-success center-block  BtnCapturar" data-toggle="modal"
+                                data-target="#ModalMensagem">
+                            Capturar Amigo
+                        </button>
+
+                        <br />
+
+                        <!--Configuração do Botão que vai Abrir o Modal, onde será definido os parametros do Modal com os dados que
+                        irá aparecer no JQuery-->
+
+                        <button class="btn btn-primary BtnDetalhes" onclick="return false"
+                                data-Imagem="@item.Imagem"
+                                data-NomePet="@item.NomePet"
+                                data-TipoPet="@item.TipoPet"
+                                data-Situacao="@item.Situacao"
+                                data-Idade="@item.Idade"
+                                data-NomeRaca="@item.NomeRaça"
+                                data-Sexo="@item.Sexo"
+                                data-Porte="@item.Porte"
+                                data-Castrado="@item.Castrado"
+                                data-DataNascimento="@item.DataNascimento"
+                                data-OBS="@item.OBS"
+                                data-toggle="modal"
+                                data-target="#ModalDetalhes">
+                            Detalhes
+                        </button>
+                    </td>
+                }
+                else
+                {
+                    <td class="text-center">
+                        <button class="btn btn-primary BtnDetalhes" onclick="return false"
+                                data-Imagem="@item.Imagem"
+                                data-NomePet="@item.NomePet"
+                                data-TipoPet="@item.TipoPet"
+                                data-Situacao="@item.Situacao"
+                                data-Idade="@item.Idade"
+                                data-NomeRaca="@item.NomeRaça"
+                                data-Sexo="@item.Sexo"
+                                data-Porte="@item.Porte"
+                                data-Castrado="@item.Castrado"
+                                data-DataNascimento="@item.DataNascimento"
+                                data-OBS="@item.OBS"
+                                data-toggle="modal"
+                                data-target="#ModalDetalhes">
+                            Detalhes
+                        </button>
+                    </td>
+                }
+
+            </tr>
+        }
     </table>
 
 }
@@ -178,8 +187,6 @@
                 <h5 class="text-center">Detalhes</h5> <!--Titulo do Modal -->
             </div>
             <div class="modal-body">
-                <p>Imagem: <img id="ImagemModal" /></p>
-                <br />
                 <p>Nome Pet: <label id="NomePetModal"></label></p>
                 <br />
                 <p>Tipo Pet: <label id="TipoPetModal"></label></p>
@@ -230,10 +237,15 @@
 
 <!-- Scripts -->
 @section Scripts{
-     @if (ViewBag.Mensagem != "")
+    @if (ViewBag.Mensagem != "")
     {
         <script>
-            $("#ModalMensagem").modal('show');
+            $(document).ready(function () {
+                $(".BtnCapturar").click(function () {
+                    $("#ModalMensagem").modal('toggle');
+                    $("#ModalMensagem").modal('show');
+                }
+                         })
         </script>
     }
     <script>
