--- a/AmigoDono.Web/Views/Login/Signin.cshtml
+++ b/AmigoDono.Web/Views/Login/Signin.cshtml
@@ -42,7 +42,7 @@
         <img class="mb-4" src="~/Content/imagens/Logo2.png" alt="Friend of The Owner" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Por favor, registre-se</h1>
         <label for="inputEmail" class="sr-only">Email</label>
-        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder ="Email", @required = "true", @autofocus = "true", @type = "email" })
+        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder ="Email", @required = "true", @autofocus = "true"})
         @Html.ValidationMessageFor(model =>model.Email, "", new { @class = "text-danger" })
         <label for="inputPassword" class="sr-only">Senha</label>
         @Html.TextBoxFor(model => model.Senha, new { @class = "form-control", @placeholder = "Senha", @type = "password", @required = "true" })
